<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row_product"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginRight="8dp"
    card_view:cardBackgroundColor="@color/pure_white"
    card_view:cardCornerRadius="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/product_name"
            android:scaleType="fitCenter"
            android:src="@drawable/image_placeholder"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_product"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="false"
            android:textColor="#A1887F"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/iv_product"
            card_view:layout_constraintTop_toTopOf="@+id/iv_product"
            tools:text="@string/product_name" />

        <TextView
            android:id="@+id/tv_product_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="5"
            android:textColor="#BCAAA4"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_product"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_product_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_product_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_product_name"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/product_description" />

        <TextView
            android:id="@+id/tv_product_instruction"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="5"
            android:textColor="#BCAAA4"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/iv_product"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_product_description"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_product_description"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_product_description"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/product_instruction" />

        <Button
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/buy_product"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_product_instruction"
            card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintStart_toStartOf="@+id/tv_product_instruction"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_product_instruction" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

